tests/ui/include_bytes.stderr
error[E0277]: the trait bound `UnsafeCell<u32>: FromBytes` is not satisfied
  --> tests/ui/include_bytes.rs:12:42
   |
12 |     let _: core::cell::UnsafeCell<u32> = include_bytes!("../include_bytes.data");
   |                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `FromBytes` is not implemented for `UnsafeCell<u32>`
   |
   = help: the following other types implement trait `FromBytes`:
             ()
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
             MaybeUninit<T>
           and 35 others
note: required by a bound in `main::transmute`
  --> tests/ui/include_bytes.rs:12:42
   |
12 |     let _: core::cell::UnsafeCell<u32> = include_bytes!("../include_bytes.data");
   |                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `main::transmute`
   = note: this error originates in the macro `transmute` which comes from the expansion of the macro `include_bytes` (in Nightly builds, run with -Z macro-backtrace for more info)
